Toegevoegd search overview geschiedenis en fix subheader overview

--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,8 @@
 
   <body>
 
-      <!-- NAVIGATION -->
+
+    <header>
 
       <div class="logo-space">
         <a href="home.html"><img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art"></a>
@@ -37,7 +38,7 @@
 
 
 
-
+      <!-- NAVIGATION -->
       <div class="container-nav-top">
           <div class="top-nav container row">
 
@@ -180,154 +181,157 @@
 
       </div>
 
+    </header>
 
 
 
-      <!-- CONTENT -->
 
-      <div class="container padding-0 content-page">
+    <!-- CONTENT -->
 
-        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
+    <div class="container padding-0 content-page">
 
-        <h1>Find what you’re looking for?</h1>
+      <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
+
+      <h1>Find what you’re looking for?</h1>
 
 
-        <div class="row frame">
+      <div class="row frame frame-faq-links">
 
-          <div class="col faq-links">
-            <p><a href="#">How to bid?</a></p>
-            <p><a href="#">How to sell?</a></p>
-          </div>
-
-          <div class="col faq-links">
-            <p><a href="#">How to buy?</a></p>
-            <p><a href="#">How to register?</a></p>
-          </div>
-
-          <div class="col faq-links">
-            <p><a href="#">How to ask a question?</a></p>
-            <p><a href="#">What is a watchlist?</a></p>
-          </div>
-
-          <div class="col faq-links">
-            <p><a href="#">How to use a watchlist?</a></p>
-          </div>
-
+        <div class="col faq-links">
+          <p><a href="#">How to bid?</a></p>
+          <p><a href="#">How to sell?</a></p>
         </div>
 
-
-        <div class="clearfix">
-          <div class="search-faq">
-
-            <p class="display-inline"><a href="search.html">I SEARCH</a></p>
-            <img class="display-inline" src="images/pijltje-search-faq.png" alt="arrow-right">
-
-          </div>
+        <div class="col faq-links">
+          <p><a href="#">How to buy?</a></p>
+          <p><a href="#">How to register?</a></p>
         </div>
 
+        <div class="col faq-links">
+          <p><a href="#">How to ask a question?</a></p>
+          <p><a href="#">What is a watchlist?</a></p>
+        </div>
+
+        <div class="col faq-links">
+          <p><a href="#">How to use a watchlist?</a></p>
+        </div>
+
+      </div>
 
 
-        <div class="questions-faq">
+      <div class="clearfix">
 
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to bid?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to sell?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to buy?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to register?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to ask a question?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">What is a watchlist?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-          <div class="question">
-            <div class="row">
-              <p class="display-inline">Q</p>
-              <p class="display-inline">How to use a watchlist?</p>
-            </div>
-
-            <div class="row">
-              <p class="display-inline">A</p>
-              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-            </div>
-          </div>
-
-
-        </div><!-- end container content -->
-
+        <button class="search-faq" type="button">
+          <p class="display-inline"><a href="search.html">I SEARCH</a></p>
+          <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+        </button>
 
       </div>
 
 
 
-      <!-- FOOTER  -->
+      <div class="questions-faq">
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to bid?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to sell?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to buy?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to register?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to ask a question?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">What is a watchlist?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+        <div class="question">
+          <div class="row">
+            <p class="display-inline">Q</p>
+            <p class="display-inline">How to use a watchlist?</p>
+          </div>
+
+          <div class="row">
+            <p class="display-inline">A</p>
+            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+        </div>
+
+
+      </div><!-- end container content -->
+
+
+    </div>
+
+
+
+    <!-- FOOTER  -->
+    <footer>
       <div class="container-footer">
         <div class="container padding-0">
 
@@ -535,6 +539,8 @@
       <div class="logo-space">
         <a href="home.html"><img class="logo-bottom" src="images/logo-bottom.jpg" alt="logo Landoretti Art"></a>
       </div>
+
+    </footer>
 
 
 
