--- a/home.html
+++ b/home.html
@@ -29,15 +29,15 @@
 
   <body>
 
-      <!-- NAVIGATION -->
+
+    <header>
 
       <div class="logo-space">
         <a href="home.html"><img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art"></a>
       </div>
 
 
-
-
+      <!-- NAVIGATION -->
       <div class="container-nav-top">
           <div class="top-nav container row">
 
@@ -160,7 +160,7 @@
 
           </div>
       </div><!-- end container-nav-bottom -->
-
+     </header>
 
 
 
@@ -294,213 +294,216 @@
 
 
       <!-- FOOTER  -->
-      <div class="container-footer">
-        <div class="container padding-0">
+      <footer>
+        <div class="container-footer">
+          <div class="container padding-0">
 
 
-          <div class="row footer">
+            <div class="row footer">
 
 
-            <div class="col">
+              <div class="col">
 
-              <div class="blok">
-                <p class="footer-title">HELP</p>
-                <p><a href="#">Login</a></p>
-                <p><a href="#">Register</a></p>
-              </div>
-
-
-              <div class="blok">
-                <p class="footer-title">HELP</p>
-                <p><a href="#">Terms of Service</a></p>
-                <p><a href="#">Privacy Policy</a></p>
-                <p><a href="faq.html">FAQ</a></p>
-                <p><a href="#">Contact Us</a></p>
-                <p><a href="#">About Us</a></p>
-              </div>
-
-
-              <div class="blok">
-                <p class="footer-title">LANGUAGES</p>
-                <p><a href="#">Nederlands</a></p>
-                <p><a href="#">Français</a></p>
-                <p><a href="#">English</a></p>
-              </div>
-
-            </div><!-- einde column 1 footer -->
-
-
-
-
-
-            <div class="col">
-
-              <div class="blok">
-                <p class="footer-title">STYLE</p>
-                <p><a href="#">Abstract</a></p>
-                <p><a href="#">African American</a></p>
-                <p><a href="#">Asian Contemporary</a></p>
-                <p><a href="#">Conceptual</a></p>
-                <p><a href="#">Contemporary</a></p>
-                <p><a href="#">Emerging Artists</a></p>
-                <p><a href="#">Figurative</a></p>
-                <p><a href="#">Middle Eastern Contemporary</a></p>
-                <p><a href="#">Minimalism</a></p>
-                <p><a href="#">Modern</a></p>
-                <p><a href="#">Pop</a></p>
-                <p><a href="#">Urban</a></p>
-                <p><a href="#">Vintage Photographs</a></p>
-              </div>
-
-
-              <div class="blok">
-                <p class="footer-title">STYLE</p>
-                <p><a href="#">Design</a></p>
-                <p><a href="#">Paintings and Works on Paper</a></p>
-                <p><a href="#">Photographs</a></p>
-                <p><a href="#">Prints and Multiples</a></p>
-                <p><a href="#">Sculpture</a></p>
-              </div>
-
-            </div><!-- einde column 2 footer -->
-
-
-
-
-
-            <div class="col">
-
-              <div class="blok">
-                <p class="footer-title">PRICE</p>
-                <p><a href="#">Up to 5,000</a></p>
-                <p><a href="#">5,000–10,000</a></p>
-                <p><a href="#">10,000–25,000</a></p>
-                <p><a href="#">25,000–50,000</a></p>
-                <p><a href="#">50,000–100,000</a></p>
-                <p><a href="#">Above</a></p>
-              </div>
-
-
-              <div class="blok">
-                <p class="footer-title">ERA</p>
-                <p><a href="#">Pre-War</a></p>
-                <p><a href="#">1940s–1950s</a></p>
-                <p><a href="#">1960s–1980s</a></p>
-                <p><a href="#">1990s–Present</a></p>
-              </div>
-
-
-              <div class="blok">
-                <p class="footer-title">ENDINGS</p>
-                <p><a href="#">Ending this Week</a></p>
-                <p><a href="#">Newly Listed</a></p>
-                <p><a href="#">Purchase Now</a></p>
-                <p><a href="#">1990s–Present</a></p>
-              </div>
-
-            </div> <!-- einde column 3 footer -->
-
-
-            <div class="col">
-              <div class="blok search-footer">
-                <p class="footer-title">FIND WHAT YOU NEED.</p>
-
-                <div class="searchbar">
-                  <form action="home.html">
-                    <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
-                  </form>
+                <div class="blok">
+                  <p class="footer-title">HELP</p>
+                  <p><a href="#">Login</a></p>
+                  <p><a href="#">Register</a></p>
                 </div>
 
-              </div>
 
-
-              <div class="blok">
-                <p class="footer-title">CONTACT</p>
-                <p>Landoretti ART</p>
-                <p>Straatnaam xxx</p>
-                <p>xxxx, Oostende</p>
-              </div>
-
-
-              <div class="blok contact-info">
-
-                <div>
-                  <img id="cellphone" class="display-inline" src="images/transparant.png" alt="cellphone">
-                  <p class="display-inline">+xx (0)x xxx xx xx</p>
+                <div class="blok">
+                  <p class="footer-title">HELP</p>
+                  <p><a href="#">Terms of Service</a></p>
+                  <p><a href="#">Privacy Policy</a></p>
+                  <p><a href="#">FAQ</a></p>
+                  <p><a href="#">Contact Us</a></p>
+                  <p><a href="#">About Us</a></p>
                 </div>
 
-                <div>
-                  <img id="mail" class="display-inline" src="images/transparant.png" alt="mail envelope">
-                  <p class="display-inline"><a href="mailto:info@landorettiart.com">info@landorettiart.com</a></p>
+
+                <div class="blok">
+                  <p class="footer-title">LANGUAGES</p>
+                  <p><a href="#">Nederlands</a></p>
+                  <p><a href="#">Français</a></p>
+                  <p><a href="#">English</a></p>
                 </div>
+
+              </div><!-- einde column 1 footer -->
+
+
+
+
+
+              <div class="col">
+
+                <div class="blok">
+                  <p class="footer-title">STYLE</p>
+                  <p><a href="#">Abstract</a></p>
+                  <p><a href="#">African American</a></p>
+                  <p><a href="#">Asian Contemporary</a></p>
+                  <p><a href="#">Conceptual</a></p>
+                  <p><a href="#">Contemporary</a></p>
+                  <p><a href="#">Emerging Artists</a></p>
+                  <p><a href="#">Figurative</a></p>
+                  <p><a href="#">Middle Eastern Contemporary</a></p>
+                  <p><a href="#">Minimalism</a></p>
+                  <p><a href="#">Modern</a></p>
+                  <p><a href="#">Pop</a></p>
+                  <p><a href="#">Urban</a></p>
+                  <p><a href="#">Vintage Photographs</a></p>
+                </div>
+
+
+                <div class="blok">
+                  <p class="footer-title">STYLE</p>
+                  <p><a href="#">Design</a></p>
+                  <p><a href="#">Paintings and Works on Paper</a></p>
+                  <p><a href="#">Photographs</a></p>
+                  <p><a href="#">Prints and Multiples</a></p>
+                  <p><a href="#">Sculpture</a></p>
+                </div>
+
+              </div><!-- einde column 2 footer -->
+
+
+
+
+
+              <div class="col">
+
+                <div class="blok">
+                  <p class="footer-title">PRICE</p>
+                  <p><a href="#">Up to 5,000</a></p>
+                  <p><a href="#">5,000–10,000</a></p>
+                  <p><a href="#">10,000–25,000</a></p>
+                  <p><a href="#">25,000–50,000</a></p>
+                  <p><a href="#">50,000–100,000</a></p>
+                  <p><a href="#">Above</a></p>
+                </div>
+
+
+                <div class="blok">
+                  <p class="footer-title">ERA</p>
+                  <p><a href="#">Pre-War</a></p>
+                  <p><a href="#">1940s–1950s</a></p>
+                  <p><a href="#">1960s–1980s</a></p>
+                  <p><a href="#">1990s–Present</a></p>
+                </div>
+
+
+                <div class="blok">
+                  <p class="footer-title">ENDINGS</p>
+                  <p><a href="#">Ending this Week</a></p>
+                  <p><a href="#">Newly Listed</a></p>
+                  <p><a href="#">Purchase Now</a></p>
+                  <p><a href="#">1990s–Present</a></p>
+                </div>
+
+              </div> <!-- einde column 3 footer -->
+
+
+              <div class="col">
+                <div class="blok search-footer">
+                  <p class="footer-title">FIND WHAT YOU NEED.</p>
+
+                  <div class="searchbar">
+                    <form action="home.html">
+                      <input type="text" placeholder="Search" name="search">
+                      <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
+                    </form>
+                  </div>
+
+                </div>
+
+
+                <div class="blok">
+                  <p class="footer-title">CONTACT</p>
+                  <p>Landoretti ART</p>
+                  <p>Straatnaam xxx</p>
+                  <p>xxxx, Oostende</p>
+                </div>
+
+
+                <div class="blok contact-info">
+
+                  <div>
+                    <img id="cellphone" class="display-inline" src="images/transparant.png" alt="cellphone">
+                    <p class="display-inline">+xx (0)x xxx xx xx</p>
+                  </div>
+
+                  <div>
+                    <img id="mail" class="display-inline" src="images/transparant.png" alt="mail envelope">
+                    <p class="display-inline"><a href="mailto:info@landorettiart.com">info@landorettiart.com</a></p>
+                  </div>
+                </div>
+
+                <div class="blok social-icons">
+                  <a href="#" class="display-inline"><img id="facebook" src="images/transparant.png" alt="Facebook link"></a>
+                  <a href="#" class="display-inline"><img id="twitter" src="images/transparant.png" alt="Twitter link"></a>
+                  <a href="#" class="display-inline"><img id="youtube" src="images/transparant.png" alt="Youtube link"></a>
+                  <a href="#" class="display-inline"><img id="google" src="images/transparant.png" alt="Google+ link"></a>
+                </div>
+
+                <p class="copyright">© 2013 Studio6, Inc. All rights reserved.</p>
+
+
               </div>
-
-              <div class="blok social-icons">
-                <a href="#" class="display-inline"><img id="facebook" src="images/transparant.png" alt="Facebook link"></a>
-                <a href="#" class="display-inline"><img id="twitter" src="images/transparant.png" alt="Twitter link"></a>
-                <a href="#" class="display-inline"><img id="youtube" src="images/transparant.png" alt="Youtube link"></a>
-                <a href="#" class="display-inline"><img id="google" src="images/transparant.png" alt="Google+ link"></a>
-              </div>
-
-              <p class="copyright">© 2013 Studio6, Inc. All rights reserved.</p>
-
 
             </div>
 
           </div>
+        </div><!-- end container footer upper part-->
 
+
+
+        <div class="container-nav-bottom">
+            <div class="bottom-nav container row">
+
+
+                <div class="bottom-nav-menu">
+
+                    <ul class="nav">
+                        <li class="nav-item-bottom">
+                          <a class="nav-link active" href="home.html">HOME</a>
+                        </li>
+                        <li class="nav-item-bottom">
+                          <a class="nav-link" href="#">ART</a>
+                        </li>
+                        <li class="nav-item-bottom">
+                          <a class="nav-link" href="search.html">ISEARCH</a>
+                        </li>
+                        <li class="nav-item-bottom">
+                          <a class="nav-link" href="#">MYAUCTIONS</a>
+                        </li>
+                        <li class="nav-item-bottom">
+                          <a class="nav-link" href="#">MYBIDS</a>
+                        </li>
+                        <li class="nav-item-bottom">
+                          <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+
+                <div class="languages">
+                  <p>
+                    <a href="#">NL</a>
+                    <a href="#">FR</a>
+                    <a href="#">EN</a>
+                  </p>
+                </div>
+
+
+            </div>
+        </div><!-- end container footer bottom part -->
+
+
+        <div class="logo-space">
+          <a href="home.html"><img class="logo-bottom" src="images/logo-bottom.jpg" alt="logo Landoretti Art"></a>
         </div>
-      </div><!-- end container footer upper part-->
 
-
-
-      <div class="container-nav-bottom">
-          <div class="bottom-nav container row">
-
-
-              <div class="bottom-nav-menu">
-
-                  <ul class="nav">
-                      <li class="nav-item-bottom">
-                        <a class="nav-link active" href="home.html">HOME</a>
-                      </li>
-                      <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">ART</a>
-                      </li>
-                      <li class="nav-item-bottom">
-                        <a class="nav-link" href="search.html">ISEARCH</a>
-                      </li>
-                      <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYAUCTIONS</a>
-                      </li>
-                      <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYBIDS</a>
-                      </li>
-                      <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">CONTACT</a>
-                      </li>
-                  </ul>
-
-              </div>
-
-
-              <div class="languages">
-                <p>
-                  <a href="#">NL</a>
-                  <a href="#">FR</a>
-                  <a href="#">EN</a>
-                </p>
-              </div>
-
-
-          </div>
-      </div><!-- end container footer bottom part -->
-
-
-      <div class="logo-space">
-        <a href="home.html"><img class="logo-bottom" src="images/logo-bottom.jpg" alt="logo Landoretti Art"></a>
-      </div>
+      </footer>
 
 
 
