Toegevoegd hover kleuren search geschiedenis + vertical align middle button

--- a/search.html
+++ b/search.html
@@ -293,6 +293,108 @@
             </div>
           </div>
 
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="row frame">
+            <div class="col col-lg-10">
+              <p><span>Search</span>: Mona Lisa, Leonardo Da Vinci</p>
+              <p><span>Description</span>: Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
+              <p><span>Posted</span>: 5 July 2013</p>
+            </div>
+
+            <div class="col">
+              <button type="button" name="own-artwork">
+                <p class="display-inline">I OWN THIS ARTWORK</p>
+                <a href="#"><img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow right"></a>
+              </button>
+            </div>
+          </div>
+
         </div>
 
 
