--- a/search.html
+++ b/search.html
@@ -198,17 +198,17 @@
         <h4>Add a request</h4>
 
 
-        <form class="form-search" action="search.html" method="post">
+        <form class="form-search" id="needs-validation" action="search.html" method="post" novalidate>
 
           <div class="row">
             <div class="col">
               <label>What are you looking for?</label>
-              <input type="text" placeholder="Mona Lisa" name="artwork" required>
+              <input type="text" class="form-control" placeholder="Mona Lisa" name="artwork" required>
             </div>
 
             <div class="col">
               <label>Artist</label>
-              <input type="text" placeholder="Leonardo Da Vinci" name="artist" required>
+              <input type="text" class="form-control" placeholder="Leonardo Da Vinci" name="artist" required>
             </div>
           </div>
 
@@ -222,7 +222,7 @@
 
           <div class="row">
             <div class="col col-lg-9">
-              <input type="text" placeholder="Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore" name="info-art" required>
+              <input type="text" class="form-control" placeholder="Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore" name="info-art" required>
             </div>
 
             <div class="col">
